sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value getLength
		for(i<-0 to getLength-2){
                            ^